--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.3.5",
     "typescript": "~3.7.2",
     "uuid": "^8.3.2"
   },
+  "homepage": "https://github.io/EvelinSu/my-react-homeworks",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +47,7 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.7.1"
   }
 }
