--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "name": "my-react-homeworks",
   "homepage": "https://EvelinSu.github.io/my-react-homeworks",
-  "name": "simple-react-homeworks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
