- added gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-homeworks",
+  "name": "simple-react-homeworks",
   "homepage": "https://EvelinSu.github.io/my-react-homeworks",
   "version": "0.1.0",
   "private": true,
