--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
@@ -33,9 +33,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
