--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homeworks2",
-  "homepage": "https://EvelinSu.github.io/my-react-homeworks",
+  "homepage": "https://EvelinSu.github.io/my-react-training",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
